syntax = "proto3";

package IT.WebServices.Fragments.Authorization.Payment.Stripe;

import "google/protobuf/timestamp.proto";

import "Protos/IT/WebServices/Fragments/Authorization/Payment/SharedTypes.proto";

message StripeOneTimePaymentRecord {
  string UserID = 1; // Guid for the user
  string InternalID = 2; // Guid for the Internal object that was purchased, ex: Guid of video
  string PaymentID = 3; // Guid for the Payment
  string StripePaymentID = 4;
  PaymentStatus Status = 5;
  uint32 AmountCents = 11;
  uint32 TaxCents = 12;
  uint32 TaxRateThousandPercents = 13; //Tax rate 1.234% = 1234 or taxrate * 100000
  uint32 TotalCents = 14;
  google.protobuf.Timestamp CreatedOnUTC = 21;
  google.protobuf.Timestamp ModifiedOnUTC = 22;
  google.protobuf.Timestamp PaidOnUTC = 23;
  string CreatedBy = 31;
  string ModifiedBy = 32;
}